<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LaaNo Android application
  ~
  ~ @author Aleksandr Borisenko <developer@laano.net>
  ~ Copyright (C) 2017 Aleksandr Borisenko
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable name="viewModel"
            type="com.bytesforge.linkasanote.laano.links.addeditlink.AddEditLinkViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:snackbarId="@{viewModel.snackbarId}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/screen_edge_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:linkError="@{viewModel.linkErrorText}">

                    <EditText
                        android:id="@+id/link_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_link_hint"
                        android:inputType="text|textNoSuggestions"
                        android:maxLines="1"
                        android:text="@={viewModel.linkLink}"
                        android:afterTextChanged="@{() -> viewModel.afterLinkChanged()}"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/checkbox_disabled"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:labelFor="@+id/checkbox_disabled"
                        android:text="@string/add_edit_link_disabled_hint"
                        android:gravity="center_vertical|end" />

                    <!-- NOTE: both Start & End padding go to the end of CheckBox -->
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_disabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingTop="@dimen/dialog_checkbox_padding"
                        android:paddingBottom="@dimen/dialog_checkbox_padding"
                        android:checked="@={viewModel.linkDisabled}"
                        android:gravity="center_vertical|end" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/link_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_name_hint"
                        android:inputType="text|textNoSuggestions"
                        android:maxLines="1"
                        android:text="@={viewModel.linkName}"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/link_tags_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bytesforge.linkasanote.laano.TagsCompletionView
                        android:id="@+id/link_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_tags_hint"
                        android:inputType="text|textNoSuggestions|textMultiLine"
                        android:lineSpacingExtra="@dimen/tags_line_spacing_extra"
                        android:onFocusChange="@{viewModel::onTagsFocusChange}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/main_button_padding"
                    android:layout_marginTop="@dimen/main_button_margin_vertical"
                    android:text="@{viewModel.addButtonText}"
                    android:enabled="@{viewModel.addButton}"
                    android:onClick="@{() -> viewModel.onAddButtonClick()}" />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
