...
    <string name="dialog_button_keep_notes">Keep Notes</string>
    <string name="dialog_button_upload">Upload</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="laano_tab_links_title">Links</string>
    <string name="laano_tab_favorites_title">Favorites</string>
    <string name="laano_tab_notes_title">Notes</string>
    <string name="laano_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to show the list of existing accounts</string>
    <string name="laano_account_added">A new account has been added</string>
    <string name="laano_offline">Application offline, please enable Internet connection</string>
    <string name="laano_not_syncable">Unable to access the Cloud storage, please log in again</string>
    <string name="laano_shortcut_add_link">Add Link</string>
    <string name="laano_shortcut_add_favorite">Add Favorite</string>
...
