...
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/Laano.Toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/Laano.Popup" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Laano.TabLayout"
                    app:tabMode="fixed"
                    app:tabGravity="fill" />
            </com.google.android.material.appbar.AppBarLayout>
...
                    android:id="@+id/laano_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/ic_add"
                app:fabSize="normal" />
...
